--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,13 @@
     ],
     "java.debug.settings.onBuildFailureProceed": true,
     "cSpell.words": [
-        "Clube"
-    ]
+        "Clube",
+        "Enfretamento",
+        "Gereciador",
+        "Liga",
+        "lista",
+        "resultado",
+        "salvar"
+    ],
+    "jdk.runConfig.vmOptions": "--enable-preview --source 22"
 }
